--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
   "version": "1.0.0",
   "description": "aplicativo de comida",
   "main": "index.js",
+  "repository": "https://github.com/pedrobolfe/APP_FOOD_API.git",
   "author": "Pedro Sch",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/index.ts"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.48.0",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
