--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
         ],
         "quotes": [
             "error",
-            "double"
+            "simples"
         ],
         "semi": [
             "error",
