--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "APP_FOOD_API",
+  "name": "appfood",
   "version": "1.0.0",
-  "description": "aplicativo de comida",
+  "description": "",
   "main": "index.js",
-  "repository": "https://github.com/pedrobolfe/APP_FOOD_API.git",
-  "author": "Pedro Sch",
-  "license": "MIT",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.48.0",
-    "nodemon": "^3.0.1",
+    "@types/multer": "^1.4.7",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1"
   }
 }
